@@ -4,6 +4,8 @@
 
 === 1.0.2 ===
 - Fixed typo in Wavefront Object File Format name.
+- Added dspu::semitones_to_frequency_shift function that allows to compute relative
+  frequency multiplier for relative musical pitch shift.
 
 === 1.0.1 ===
 * Fixed bugs in construct()/destroy() method pairs for several DSP modules.
